// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`badge-component applies dynamic styles correctly (token path) 1`] = `
<badge-component absolute="" label="Styled" left="10" token="" top="20" z-index="5">
  <!---->
  <div aria-disabled="false" class="badge__token-wrapper">
    <span class="badge__wrapper">
      <span aria-atomic="true" aria-label="" aria-live="polite" class="badge__token bg-primary" role="status" tabindex="0" style="position: absolute; left: 10px; top: 20px; z-index: 5;"></span>
    </span>
  </div>
</badge-component>
`;

exports[`badge-component dot badge: bordered + elevation classes present and stable 1`] = `
<badge-component bordered="" dot="" elevation="2" variant="success">
  <!---->
  <div aria-disabled="false" class="badge__token-wrapper">
    <span class="badge__wrapper">
      <span aria-atomic="true" aria-label="" aria-live="polite" class="badge--dot bg-success elevated-2 token-bordered" role="status" tabindex="0"></span>
    </span>
  </div>
</badge-component>
`;

exports[`badge-component renders default badge 1`] = `
<badge-component label="Default badge">
  <!---->
  <div aria-disabled="false" aria-hidden="true" class="badge bg-secondary">
    <div class="badge__content"></div>
  </div>
</badge-component>
`;

exports[`badge-component renders dot badge with shape and pulse 1`] = `
<badge-component dot="" pulse="" shape="circle" variant="danger">
  <!---->
  <div aria-disabled="false" class="badge__token-wrapper">
    <span class="badge__wrapper">
      <span aria-atomic="true" aria-label="" aria-live="polite" class="badge--dot bg-danger circle pulse" role="status" tabindex="0"></span>
    </span>
  </div>
</badge-component>
`;

exports[`badge-component renders positioned badge (left) 1`] = `
<badge-component bdg-position="left" label="Positioned">
  <!---->
  <div aria-disabled="false" aria-hidden="true" class="badge bg-secondary me-1"></div>
</badge-component>
`;

exports[`badge-component renders positioned badge (right) 1`] = `
<badge-component bdg-position="right" label="Positioned">
  <!---->
  <div aria-disabled="false" aria-hidden="true" class="badge bg-secondary ms-1"></div>
</badge-component>
`;

exports[`badge-component renders token badge with ARIA props and inlineStyles 1`] = `
<badge-component aria-describedby="badgeDesc" aria-label="Token badge" aria-labelledby="badgeLabel" inline-styles="background-color: yellow; border-radius: 8px;" size="lg" token="" variant="info">
  <!---->
  <div aria-disabled="false" aria-label="Token badge" class="badge__token-wrapper">
    <span class="badge__wrapper">
      <span aria-atomic="true" aria-describedby="badgeDesc" aria-label="Token badge" aria-labelledby="badgeLabel" aria-live="polite" class="badge__token bg-info lg" role="status" tabindex="0" style="background-color: yellow; border-radius: 8px;"></span>
    </span>
  </div>
</badge-component>
`;

exports[`badge-component token badge: outlined + bordered + elevation classes present and stable 1`] = `
<badge-component bordered="" elevation="3" label="Combo" outlined="" token="" variant="primary">
  <!---->
  <div aria-disabled="false" class="badge__token-wrapper">
    <span class="badge__wrapper">
      <span aria-atomic="true" aria-label="" aria-live="polite" class="badge__token bg-primary elevated-3 outlined token-bordered" role="status" tabindex="0"></span>
    </span>
  </div>
</badge-component>
`;
